[package]
name = "rrthozopsi"
version = "0.0.1"
authors = ["DarkEld3r <stanislav.tkach@gmail.com>"]
repository = "https://github.com/DarkEld3r/rrthozopsi.git"
homepage = "https://github.com/DarkEld3r/rrthozopsi.git"
license = "MIT"
readme = "README.md"
description = "Experimental game"
keywords = ["game", "piston"]

[[bin]]
name = "rrthozopsi"
path = "main/main.rs"

[dependencies]
piston_window = "*"
gfx_device_gl = "*"
piston2d-gfx_graphics = "*"
find_folder = "*"
