[package]
name = "rrthozopsi"
version = "0.0.1"
authors = ["DarkEld3r <stanislav.tkach@gmail.com>"]
repository = "https://github.com/DarkEld3r/rrthozopsi.git"
homepage = "https://github.com/DarkEld3r/rrthozopsi.git"
license = "MIT"
readme = "README.md"
description = "Experimental game"
keywords = ["game", "piston"]

[[bin]]
name = "rrthozopsi"

[dependencies]
piston_window = "0.33.0"
gfx_device_gl = "0.7.0"
piston2d-gfx_graphics = "0.17.0"
find_folder = "*"
conrod = "*"
