[package]
name = "rrthozopsi"
version = "0.0.1"
authors = ["DarkEld3r <stanislav.tkach@gmail.com>"]
repository = "https://github.com/DarkEld3r/rrthozopsi.git"
homepage = "https://github.com/DarkEld3r/rrthozopsi.git"
license = "MIT"
readme = "README.md"
description = "Experimental game"
keywords = ["game", "piston"]
build = "build.rs"

[[bin]]
name = "rrthozopsi"

[dependencies]
piston_window = "0.45.0"
conrod = "*"
gfx_device_gl = "0.9.0"
